# apidocs.swagger.json
@@ -105,36 +105,6 @@
     "version": "1.0"
   },
   "paths": {
-    "/healthCheck": {
-      "get": {
-        "operationId": "HealthService_Check",
-        "parameters": [
-          {
-            "in": "query",
-            "name": "service",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1CheckResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "tags": [
-          "HealthService"
-        ]
-      }
-    },
     "/v1/example/{id}": {
       "post": {
         "operationId": "ExampleService_Query",
@@ -180,6 +150,36 @@
         ],
         "tags": [
           "ExampleService"
+        ]
+      }
+    },
+    "/v1/healthCheck": {
+      "get": {
+        "operationId": "HealthService_Check",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "service",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CheckResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "HealthService"
         ]
       }
     }
